--- a/frontend/tic-tac-toe/src/App.css
+++ b/frontend/tic-tac-toe/src/App.css
@@ -1,13 +1,13 @@
 @font-face {
-    font-family: Bangers-Regular;
-    src: url('./assets/fonts/Bangers-Regular.ttf');
+    font-family: FjallaOne-Regular;
+    src: url('./assets/fonts/FjallaOne-Regular.ttf');
 }
 
 * {
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
-    font-family: Bangers-Regular;
+    font-family: FjallaOne-Regular;
 }
 
 html, body {
@@ -30,11 +30,9 @@ html, body {
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 
-        80px
         1fr
         50px;
     grid-template-areas: 
-        "header"
         "content"
         "footer"
 }
