--- a/frontend/tic-tac-toe/src/components/templates/Header/Header.css
+++ b/frontend/tic-tac-toe/src/components/templates/Header/Header.css
@@ -23,3 +23,15 @@ header.header .header-login {
     color: #fafafa;
     cursor: pointer;
 }
+
+header.header .login-drop-down {
+    display: none;
+    position: absolute;
+    right: 0px;
+    top: 65px;
+}
+
+header.header .header-login:hover .login-drop-down {
+    display: flex;
+    justify-content: flex-start;
+}
