Ajuste de estilo e criacao da render. das jogadas

--- a/frontend/tic-tac-toe/src/App.css
+++ b/frontend/tic-tac-toe/src/App.css
@@ -1,4 +1,9 @@
 @font-face {
+    font-family: FredokaOne-Regular;
+    src: url('./assets/fonts/FredokaOne-Regular.ttf');
+}
+
+@font-face {
     font-family: FjallaOne-Regular;
     src: url('./assets/fonts/FjallaOne-Regular.ttf');
 }
