--- a/frontend/tic-tac-toe/src/components/pages/GameMulti/GameMulti.css
+++ b/frontend/tic-tac-toe/src/components/pages/GameMulti/GameMulti.css
@@ -2,6 +2,7 @@
     padding-top: 50px;
 
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
