--- a/frontend/tic-tac-toe/src/components/Main/Board/Board.css
+++ b/frontend/tic-tac-toe/src/components/Main/Board/Board.css
@@ -35,6 +35,38 @@ div.board {
 
 .container-board .actions{
     padding-top: 20px;
+    margin-bottom: 20px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-board .actions button {
+    font-size: 20px;
+    padding: 5px 15px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 4px 5px 8px #0005;
+    margin: 0px 10px;
+    width: 100px;
+    background-color: #fff;
+    color: #333;
+    transition: all .2s;
+}
+
+.container-board .actions .restart:hover {
+    background-color: rgb(169, 113, 233);
+    color: white;
+    cursor: pointer;
+    transition: all .2s;
+}
+
+.container-board .actions .leave:hover {
+    background-color: rgb(238, 71, 94);
+    color: white;
+    cursor: pointer;
+    transition: all .2s;
 }
 
 .next-player {
@@ -58,3 +90,59 @@ div.board {
 .left-limit { border-left: 4px solid rgb(169, 113, 233); }
 .top-limit { border-top: 4px solid rgb(169, 113, 233); }
 .bottom-limit { border-bottom: 4px solid rgb(169, 113, 233); }
+
+.show-winner {
+    padding: 100px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.show-winner .game-result {
+    font-size: 100px;
+    color: #333;
+}
+
+.show-winner .win {
+    margin-top: 20px;
+    margin-bottom: 50px;
+    font-size: 40px;
+    color: rgb(169, 113, 233);
+}
+
+.show-winner .btns-game-result {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 20px;
+}
+
+.show-winner .btns-game-result button {
+    font-size: 40px;
+    padding: 10px 20px;
+    width: 180px;
+    margin: 10px 20px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 4px 5px 8px #0005;
+    background-color: #fff;
+    color: #333;
+    transition: all .2s;
+}
+
+.show-winner .btns-game-result .restart:hover {
+    background-color: rgb(169, 113, 233);
+    color: white;
+    cursor: pointer;
+    transition: all .2s;
+}
+
+.show-winner .btns-game-result .leave:hover {
+    background-color: rgb(238, 71, 94);
+    color: white;
+    cursor: pointer;
+    transition: all .2s;
+}
