--- a/frontend/tic-tac-toe/src/assets/General-styles/styles.css
+++ b/frontend/tic-tac-toe/src/assets/General-styles/styles.css
@@ -60,6 +60,7 @@
     font-size: 18px;
     text-align: center;
     color: #555;
+    margin: 40px 0px;
 }
 .general-box {
     background-color: #fff;
