Ajustes no estilo do login

--- a/frontend/src/components/templates/Header/Header.css
+++ b/frontend/src/components/templates/Header/Header.css
@@ -22,11 +22,13 @@ header.header .header-login {
     font-size: 24px;
     color: #fafafa;
     cursor: pointer;
+    padding-right: 10px;
 }
 
 header.header .login-drop-down {
     display: none;
     position: absolute;
+    max-width: 700px;
     right: 0px;
     top: 50px;
 }
