--- a/frontend/src/assets/General-styles/styles.css
+++ b/frontend/src/assets/General-styles/styles.css
@@ -60,15 +60,16 @@
     font-size: 18px;
     text-align: center;
     color: #555;
-    margin: 40px 0px;
+    margin: 10px 0px;
 }
 .general-box {
     background-color: #fff;
     padding: 40px;
     border-radius: 10px;
     box-shadow: 1px 5px 10px #5552;
+    width: 100%;
+    height: 100%;
     max-width: 700px;
-    width: 500px;
 }
 .form-general {
     display: flex;
