--- a/frontend/src/assets/General-styles/styles.css
+++ b/frontend/src/assets/General-styles/styles.css
@@ -51,25 +51,28 @@
 
 
 .general-section {
-    display: flex;
     height: calc(100% - 80px);
-    justify-content: center;
-    align-items: center;
     border: none;
     border-radius: 10px;
     font-size: 18px;
     text-align: center;
     color: #555;
     margin: 10px 0px;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .general-box {
     background-color: #fff;
     padding: 40px;
     border-radius: 10px;
     box-shadow: 1px 5px 10px #5552;
-    width: 100%;
     height: 100%;
-    max-width: 700px;
+    width: 100%;
+    max-width: 500px;
+    margin-bottom: 40px;
 }
 .form-general {
     display: flex;
