--- a/frontend/src/components/templates/Title/Title.css
+++ b/frontend/src/components/templates/Title/Title.css
@@ -1,6 +1,6 @@
 h1.header-title {
     text-align: center;
-    padding: 50px 0px;
+    padding-bottom: 40px;
     font-size: 40px;
     color: #333;
 }
