--- a/frontend/src/components/templates/Footer/Footer.css
+++ b/frontend/src/components/templates/Footer/Footer.css
@@ -1,9 +1,25 @@
 footer.footer {
     padding: 20px;
     background: #333;
-    color: #fafafa;
+    color: rgb(196, 144, 255);
 
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+footer.footer a {
+    color: #fff;
+    text-decoration: none;
+}
+
+footer.footer a.repository {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer.footer a i {
+    font-size: 28px;
+    padding-right: 10px;
 }
